--- a/CSS_advanced/styles/13-style.css
+++ b/CSS_advanced/styles/13-style.css
@@ -47,7 +47,7 @@ h6 {
   font-weight: var(--font-weight-bold);
 }
 
-a[href]:not(:empty) {
+a[href] {
   color: var(--color-primary);
   text-decoration: none;
 }
