--- a/CSS_advanced/styles/23-style.css
+++ b/CSS_advanced/styles/23-style.css
@@ -173,11 +173,8 @@ ul.row {
   list-style: none;
 }
 
-.col-1-3,
-.col-1-2 {
+.col-1-3 {
   width: 33.33%;
-  float: left;
-  padding: 0.5rem;
 }
 
 .col-1-2 {
@@ -200,7 +197,7 @@ ul.row {
   clear: both;
 }
 
-[class^="col-"]:not(.col-1-2):not(.col-1-3) {
+[class^="col-"] {
   float: left;
   padding: 0.5rem;
 }
