--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -318,7 +318,7 @@ ul.row {
   overflow: hidden;
 }
 
-.card-work .card-image {
+.card-work .card-image img {
   height: 30rem;
   width: 100%;
   object-fit: cover;
@@ -345,15 +345,13 @@ ul.row {
   position: relative;
 }
 
-.card-title a,
-.card-work a {
+.card-work .card-title a{
   display: block;
   text-decoration: none;
   padding-top: 45%;
 }
 
-.card-title a::after,
-.card-work a::after {
+.card-work .card-title a::after{
   position: absolute;
   top: 0;
   right: 0;
